# ocltest

./: CMakeLists.txt  LICENSE  README.md  embedKernels.cmake  helper.h  kernels.cl  kernels.inl  kernels2.cl  kernels2.inl  ocltest.cpp
